# llminate

./: .gitignore  .youtube.com_cookie.txt  .youtube.com_curl-commands.txt  AGENTIC_FLOW.md  AGENTIC_FLOW_IMPLEMENTATION_PLAN.md  AGENTIC_FLOW_IMPLEMENTATION_SPEC.md  ARCHITECTURE.md  AUTHENTICATION_FUNCTIONS.md  AUTH_COMPARISON.md  AUTH_FLOW.md  AWS_PROVIDER_TEST_COMMANDS.md  CLAUDE.md  CONTINUATION.md  Cargo.toml  HTTP_COMPARISON_REPORT.md  LICENSE  MISSING_FEATURES_SPECIFICATION.md  README.md  STUBBED_CODE_AUDIT.md  auth_cat_continuation_prompt.md  auth_extracted.js  auth_orchestration_extracted.js  auth_porting_tracker.md  aws_credential_providers_extracted.js  bash_tools_test_output.txt  categorized_implementaton_plan_prompt.md  claude-rules.md  claude_code_debug.txt  claude_code_written_in_rust.md  client_management_extracted.js  config_example.json  curl_oauth_request.txt  data_analyzer.py  extracted_auth.js  format_test_results.md  formatting_test.txt  impl_plan_anthropic_api_auth.md  impl_plan_auth_orchestration.md  impl_plan_aws_auth.md  impl_plan_aws_credential_providers.md  (+23 more)
SPECS/: CURRENT_STATE.md  CURRENT_STATE_SEPT_11_1_37AM.md  CURRENT_STATE_SEPT_7.md  CURRENT_STATE_SEPT_8_11_40.md  JS_AUTHENTICATION_CURRENT.md  JS_AUTHENTICATION_RESEARCH.md  PERMISSION_ARCHITECTURE.md  TOOLS_IMPLEMENTATION_PRD.md  interrupt-functionality-implementation-plan.md  oauth-login-implementation-analysis.md  prompt-parity-prd.md  text-rendering.md  tool-code-boundaries.md  tool-implementations.md
SPECS_TEST/: jades_enhancements.md
src/: auth.rs.bak  cli.rs  config.rs  error.rs  hooks.rs  lib.rs  main.rs  mcp.rs  oauth.rs  permissions.rs  plugin.rs  progress.rs  telemetry.rs  updater.rs
src/ai/: agent_tool.rs  ask_user_question_tool.rs  client.rs  client_adapter.rs  conversation.rs  mod.rs  (+16 more)
tests/: basic_numeric_test.rs  basic_simple_test.rs  basic_test.rs  basic_unit_test.rs  my_simple_test.rs  new_simple_test.rs  new_test.rs  simple_test.rs  test_auth_integration.rs  test_aws_auth.rs  test_aws_auth_integration.rs  test_aws_real_credentials.rs  test_bash_tool_advanced.rs  test_client_management.rs  test_file_edit_tool.rs  test_file_multi_edit_tool.rs  test_grep_tool.rs  test_hmac_basic.rs  test_hmac_debug.rs  test_http_auth_infrastructure.rs  test_notebook_tools.rs  test_proxy_authentication.rs  test_session_management.rs  test_task_tool.rs  test_todo_tool.rs  test_web_tools.rs
(+29 files in other folders)
