[package]
name = "llminate"
version = "1.0.29"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"

# Environment variable loading
dotenv = "0.15"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"

# TUI Framework
ratatui = "0.29"
crossterm = { version = "0.27", features = ["bracketed-paste"] }
tui-textarea = "0.7"
pulldown-cmark = "0.13"
syntect = "5.2"
arboard = "3.4"  # Clipboard support

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
warp = "0.3"

# HTTP parsing
httparse = "1.8"

# Protocol Buffers
prost = "0.12"
prost-types = "0.12"

# Layout engine
taffy = "0.3"

# CLI parsing
clap = { version = "4.4", features = ["derive", "env", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_urlencoded = "0.7"
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
base64 = "0.21"
bytes = "1.5"
url = "2.5"
dirs = "5.0"
which = "6.0"
once_cell = "1.19"
parking_lot = "0.12"
colored = "2.1"
shell-words = "1.1"
atty = "0.2"
terminal_size = "0.3"
similar = "2.4"
hex = "0.4"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.8"
crc32fast = "1.4"
hmac = "0.12"
urlencoding = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# File watching
notify = "6.1"

# Compression
flate2 = "1.0"

# Testing
tempfile = "3.8"

# Web tools
html2text = "0.12"

# Git integration
git2 = "0.18"

# Glob patterns
glob = "0.3"

# Process management
nix = { version = "0.27", features = ["signal", "process"] }
libc = "0.2"

# Streaming
futures = "0.3"

# Random number generation
rand = "0.8"

# Error tracking
sentry = { version = "0.32", features = ["anyhow", "debug-images", "tracing", "backtrace"] }
unicode-width = "0.2.0"

# Terminal progress bars (for print mode)
indicatif = "0.17"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.6"
